cs101_information_objects.nim


type
  MeasuredValueNormalized* = ptr sMeasuredValueNormalized

proc MeasuredValueNormalized_destroy*(self: MeasuredValueNormalized) {.
    importc: "MeasuredValueNormalized_destroy",  cdecl.}
proc MeasuredValueNormalized_create*(self: MeasuredValueNormalized; ioa: cint;
                                    value: cfloat; quality: QualityDescriptor): MeasuredValueNormalized {.
    importc: "MeasuredValueNormalized_create",  cdecl.}
proc MeasuredValueNormalized_getValue*(self: MeasuredValueNormalized): cfloat {.
    importc: "MeasuredValueNormalized_getValue",  cdecl.}
proc MeasuredValueNormalized_setValue*(self: MeasuredValueNormalized; value: cfloat) {.
    importc: "MeasuredValueNormalized_setValue",  cdecl.}
proc MeasuredValueNormalized_getQuality*(self: MeasuredValueNormalized): QualityDescriptor {.
    importc: "MeasuredValueNormalized_getQuality",  cdecl.}
## **********************************************************************
##  MeasuredValueNormalizedWithCP24Time2a : MeasuredValueNormalized
## *********************************************************************

type
  MeasuredValueNormalizedWithCP24Time2a* = ptr sMeasuredValueNormalizedWithCP24Time2a

proc MeasuredValueNormalizedWithCP24Time2a_destroy*(
    self: MeasuredValueNormalizedWithCP24Time2a) {.
    importc: "MeasuredValueNormalizedWithCP24Time2a_destroy",  cdecl.}
proc MeasuredValueNormalizedWithCP24Time2a_create*(
    self: MeasuredValueNormalizedWithCP24Time2a; ioa: cint; value: cfloat;
    quality: QualityDescriptor; timestamp: CP24Time2a): MeasuredValueNormalizedWithCP24Time2a {.
    importc: "MeasuredValueNormalizedWithCP24Time2a_create",  cdecl.}
proc MeasuredValueNormalizedWithCP24Time2a_getTimestamp*(
    self: MeasuredValueNormalizedWithCP24Time2a): CP24Time2a {.
    importc: "MeasuredValueNormalizedWithCP24Time2a_getTimestamp",
     cdecl.}
proc MeasuredValueNormalizedWithCP24Time2a_setTimestamp*(
    self: MeasuredValueNormalizedWithCP24Time2a; value: CP24Time2a) {.
    importc: "MeasuredValueNormalizedWithCP24Time2a_setTimestamp",
     cdecl.}
## **********************************************************************
##  MeasuredValueNormalizedWithCP56Time2a : MeasuredValueNormalized
## *********************************************************************

type
  MeasuredValueNormalizedWithCP56Time2a* = ptr sMeasuredValueNormalizedWithCP56Time2a

proc MeasuredValueNormalizedWithCP56Time2a_destroy*(
    self: MeasuredValueNormalizedWithCP56Time2a) {.
    importc: "MeasuredValueNormalizedWithCP56Time2a_destroy",  cdecl.}
proc MeasuredValueNormalizedWithCP56Time2a_create*(
    self: MeasuredValueNormalizedWithCP56Time2a; ioa: cint; value: cfloat;
    quality: QualityDescriptor; timestamp: CP56Time2a): MeasuredValueNormalizedWithCP56Time2a {.
    importc: "MeasuredValueNormalizedWithCP56Time2a_create",  cdecl.}
proc MeasuredValueNormalizedWithCP56Time2a_getTimestamp*(
    self: MeasuredValueNormalizedWithCP56Time2a): CP56Time2a {.
    importc: "MeasuredValueNormalizedWithCP56Time2a_getTimestamp",
     cdecl.}
proc MeasuredValueNormalizedWithCP56Time2a_setTimestamp*(
    self: MeasuredValueNormalizedWithCP56Time2a; value: CP56Time2a) {.
    importc: "MeasuredValueNormalizedWithCP56Time2a_setTimestamp",
     cdecl.}
## ******************************************
##  MeasuredValueScaled : InformationObject
## *****************************************

type
  MeasuredValueScaled* = ptr sMeasuredValueScaled

## *
##  \brief Create a new instance of MeasuredValueScaled information object
##
##  \param self Reference to an existing instance to reuse, if NULL a new instance will we dynamically allocated
##  \param ioa Information object address
##  \param value scaled value (range -32768 - 32767)
##  \param quality quality descriptor (according to IEC 60870-5-101:2003 7.2.6.3)
##
##  \return Reference to the new instance
##

proc MeasuredValueScaled_create*(self: MeasuredValueScaled; ioa: cint; value: cint;
                                quality: QualityDescriptor): MeasuredValueScaled {.
    importc: "MeasuredValueScaled_create",  cdecl.}
proc MeasuredValueScaled_destroy*(self: MeasuredValueScaled) {.
    importc: "MeasuredValueScaled_destroy",  cdecl.}
proc MeasuredValueScaled_getValue*(self: MeasuredValueScaled): cint {.
    importc: "MeasuredValueScaled_getValue",  cdecl.}
proc MeasuredValueScaled_setValue*(self: MeasuredValueScaled; value: cint) {.
    importc: "MeasuredValueScaled_setValue",  cdecl.}
proc MeasuredValueScaled_getQuality*(self: MeasuredValueScaled): QualityDescriptor {.
    importc: "MeasuredValueScaled_getQuality",  cdecl.}
proc MeasuredValueScaled_setQuality*(self: MeasuredValueScaled;
                                    quality: QualityDescriptor) {.
    importc: "MeasuredValueScaled_setQuality",  cdecl.}
## **********************************************************************
##  MeasuredValueScaledWithCP24Time2a : MeasuredValueScaled
## *********************************************************************

type
  MeasuredValueScaledWithCP24Time2a* = ptr sMeasuredValueScaledWithCP24Time2a

proc MeasuredValueScaledWithCP24Time2a_destroy*(
    self: MeasuredValueScaledWithCP24Time2a) {.
    importc: "MeasuredValueScaledWithCP24Time2a_destroy",  cdecl.}
proc MeasuredValueScaledWithCP24Time2a_create*(
    self: MeasuredValueScaledWithCP24Time2a; ioa: cint; value: cint;
    quality: QualityDescriptor; timestamp: CP24Time2a): MeasuredValueScaledWithCP24Time2a {.
    importc: "MeasuredValueScaledWithCP24Time2a_create",  cdecl.}
proc MeasuredValueScaledWithCP24Time2a_getTimestamp*(
    self: MeasuredValueScaledWithCP24Time2a): CP24Time2a {.
    importc: "MeasuredValueScaledWithCP24Time2a_getTimestamp",  cdecl.}
proc MeasuredValueScaledWithCP24Time2a_setTimestamp*(
    self: MeasuredValueScaledWithCP24Time2a; value: CP24Time2a) {.
    importc: "MeasuredValueScaledWithCP24Time2a_setTimestamp",  cdecl.}
## **********************************************************************
##  MeasuredValueScaledWithCP56Time2a : MeasuredValueScaled
## *********************************************************************

type
  MeasuredValueScaledWithCP56Time2a* = ptr sMeasuredValueScaledWithCP56Time2a

proc MeasuredValueScaledWithCP56Time2a_destroy*(
    self: MeasuredValueScaledWithCP56Time2a) {.
    importc: "MeasuredValueScaledWithCP56Time2a_destroy",  cdecl.}
proc MeasuredValueScaledWithCP56Time2a_create*(
    self: MeasuredValueScaledWithCP56Time2a; ioa: cint; value: cint;
    quality: QualityDescriptor; timestamp: CP56Time2a): MeasuredValueScaledWithCP56Time2a {.
    importc: "MeasuredValueScaledWithCP56Time2a_create",  cdecl.}
proc MeasuredValueScaledWithCP56Time2a_getTimestamp*(
    self: MeasuredValueScaledWithCP56Time2a): CP56Time2a {.
    importc: "MeasuredValueScaledWithCP56Time2a_getTimestamp",  cdecl.}
proc MeasuredValueScaledWithCP56Time2a_setTimestamp*(
    self: MeasuredValueScaledWithCP56Time2a; value: CP56Time2a) {.
    importc: "MeasuredValueScaledWithCP56Time2a_setTimestamp",  cdecl.}
## ******************************************
##  MeasuredValueShort : InformationObject
## *****************************************

type
  MeasuredValueShort* = ptr sMeasuredValueShort

proc MeasuredValueShort_destroy*(self: MeasuredValueShort) {.
    importc: "MeasuredValueShort_destroy",  cdecl.}
proc MeasuredValueShort_create*(self: MeasuredValueShort; ioa: cint; value: cfloat;
                               quality: QualityDescriptor): MeasuredValueShort {.
    importc: "MeasuredValueShort_create",  cdecl.}
proc MeasuredValueShort_getValue*(self: MeasuredValueShort): cfloat {.
    importc: "MeasuredValueShort_getValue",  cdecl.}
proc MeasuredValueShort_setValue*(self: MeasuredValueShort; value: cfloat) {.
    importc: "MeasuredValueShort_setValue",  cdecl.}
proc MeasuredValueShort_getQuality*(self: MeasuredValueShort): QualityDescriptor {.
    importc: "MeasuredValueShort_getQuality",  cdecl.}
## **********************************************************************
##  MeasuredValueShortWithCP24Time2a : MeasuredValueShort
## *********************************************************************

type
  MeasuredValueShortWithCP24Time2a* = ptr sMeasuredValueShortWithCP24Time2a

proc MeasuredValueShortWithCP24Time2a_destroy*(
    self: MeasuredValueShortWithCP24Time2a) {.
    importc: "MeasuredValueShortWithCP24Time2a_destroy",  cdecl.}
proc MeasuredValueShortWithCP24Time2a_create*(
    self: MeasuredValueShortWithCP24Time2a; ioa: cint; value: cfloat;
    quality: QualityDescriptor; timestamp: CP24Time2a): MeasuredValueShortWithCP24Time2a {.
    importc: "MeasuredValueShortWithCP24Time2a_create",  cdecl.}
proc MeasuredValueShortWithCP24Time2a_getTimestamp*(
    self: MeasuredValueShortWithCP24Time2a): CP24Time2a {.
    importc: "MeasuredValueShortWithCP24Time2a_getTimestamp",  cdecl.}
proc MeasuredValueShortWithCP24Time2a_setTimestamp*(
    self: MeasuredValueShortWithCP24Time2a; value: CP24Time2a) {.
    importc: "MeasuredValueShortWithCP24Time2a_setTimestamp",  cdecl.}
## **********************************************************************
##  MeasuredValueShortWithCP56Time2a : MeasuredValueShort
## *********************************************************************

type
  MeasuredValueShortWithCP56Time2a* = ptr sMeasuredValueShortWithCP56Time2a

proc MeasuredValueShortWithCP56Time2a_destroy*(
    self: MeasuredValueShortWithCP56Time2a) {.
    importc: "MeasuredValueShortWithCP56Time2a_destroy",  cdecl.}
proc MeasuredValueShortWithCP56Time2a_create*(
    self: MeasuredValueShortWithCP56Time2a; ioa: cint; value: cfloat;
    quality: QualityDescriptor; timestamp: CP56Time2a): MeasuredValueShortWithCP56Time2a {.
    importc: "MeasuredValueShortWithCP56Time2a_create",  cdecl.}
proc MeasuredValueShortWithCP56Time2a_getTimestamp*(
    self: MeasuredValueShortWithCP56Time2a): CP56Time2a {.
    importc: "MeasuredValueShortWithCP56Time2a_getTimestamp",  cdecl.}
proc MeasuredValueShortWithCP56Time2a_setTimestamp*(
    self: MeasuredValueShortWithCP56Time2a; value: CP56Time2a) {.
    importc: "MeasuredValueShortWithCP56Time2a_setTimestamp",  cdecl.}
## ******************************************
##  IntegratedTotals : InformationObject
## *****************************************

type
  IntegratedTotals* = ptr sIntegratedTotals

proc IntegratedTotals_destroy*(self: IntegratedTotals) {.
    importc: "IntegratedTotals_destroy",  cdecl.}
## *
##  \brief Create a new instance of IntegratedTotals information object
##
##  For message type: M_IT_NA_1 (15)
##
##  \param self Reference to an existing instance to reuse, if NULL a new instance will we dynamically allocated
##  \param ioa Information object address
##  \param value binary counter reading value and state
##
##  \return Reference to the new instance
##

proc IntegratedTotals_create*(self: IntegratedTotals; ioa: cint;
                             value: BinaryCounterReading): IntegratedTotals {.
    importc: "IntegratedTotals_create",  cdecl.}
proc IntegratedTotals_getBCR*(self: IntegratedTotals): BinaryCounterReading {.
    importc: "IntegratedTotals_getBCR",  cdecl.}
proc IntegratedTotals_setBCR*(self: IntegratedTotals; value: BinaryCounterReading) {.
    importc: "IntegratedTotals_setBCR",  cdecl.}
## **********************************************************************
##  IntegratedTotalsWithCP24Time2a : IntegratedTotals
## *********************************************************************

type
  IntegratedTotalsWithCP24Time2a* = ptr sIntegratedTotalsWithCP24Time2a

## *
##  \brief Create a new instance of IntegratedTotalsWithCP24Time2a information object
##
##  For message type: M_IT_TA_1 (16)
##
##  \param self Reference to an existing instance to reuse, if NULL a new instance will we dynamically allocated
##  \param ioa Information object address
##  \param value binary counter reading value and state
##  \param timestamp timestamp of the reading
##
##  \return Reference to the new instance
##
